Fixed issue with view feature

--- a/blog/templates/macros.html
+++ b/blog/templates/macros.html
@@ -9,7 +9,7 @@
                 <!-- dateformat filter to display the datetime in dd/mm/yy format -->
                 <!-- Jinja does not include date formatting filter by default,
                     so need to add this to filters.py -->
-                {{ post.datetime * dateformat("%d/%m/%y") }}
+                {( post.datetime|dateformat("%d/%m/%y") )}
             </li>
         </ul>
     </div>
@@ -20,7 +20,7 @@
         <!--Safe filter is used on post content,
         allows us to inclue HTML in the post content, 
         without it being automatically escaped--> 
-        {{ post.content * safe }}
+        {( post.content|safe )}
     </div>
 </div>
 {% endmacro %}
