--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -8,4 +8,17 @@
 {{ macros.render_post(post) }}
 {% endfor %}
 
+<ul class="pager">
+	{% if has_next %}
+	<li class="previous">
+		<a href="{{ url_for('posts', page=page + 1) }}">&larr; Older</a>
+	</li>l
+	{% endif %}
+	{% if has_prev %}
+	<li class="next">
+		<a href="{{url_for('posts', page=page - 1) }}">&rarr; Newer</a>
+	</li>
+	{% endif %}
+</ul>
+
 {% endblock %}
