--- a/blog/templates/posts.html
+++ b/blog/templates/posts.html
@@ -7,14 +7,18 @@
 {% for post in posts %}
 {{ macros.render_post(post) }}
 {% endfor %}
-
+<!-- Adjusted posts.html template to display some buttons which will direct us to the next and previous pages -->
 <ul class="pager">
-	{% if has_next %}
+	{% if has_prev %}
+	<!-- If has_prev variable is true, add link to the previous page
+	using Flask's url_for function to generate the URL for the route -->
 	<li class="previous">
 		<a href="{{ url_for('posts', page=page + 1) }}">&larr; Older</a>
 	</li>l
 	{% endif %}
-	{% if has_prev %}
+	<!-- If has_next variable is true, add a link to the next page
+	using Flask's url_for function to generate the URL for the route -->
+	{% if has_next %}
 	<li class="next">
 		<a href="{{url_for('posts', page=page - 1) }}">&rarr; Newer</a>
 	</li>
