macros.html now has a hyperlink

--- a/blog/templates/macros.html
+++ b/blog/templates/macros.html
@@ -15,7 +15,7 @@
     </div>
     <div class="col-md-10">
         <h1>
-            {{ post.title }}
+           <li class="active"><a href="#">{( post.title )}</a></li>
         </h1>
         <!--Safe filter is used on post content,
         allows us to inclue HTML in the post content, 
