Blog extension update

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- A base template which uses Bootsrap to provide basic stying and UI components -->
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -19,6 +20,9 @@
         <!-- Bootstrap -->
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
     </head>
+
+    <!-- Static navbar at the top -->
+    <!-- Content block below the navbar -->
 
     <body>
         <div class="navbar navbar-inverse navbar-static-top" role="navigation">
