--- a/blog/templates/macros.html
+++ b/blog/templates/macros.html
@@ -1,3 +1,5 @@
+<!-- Jinja Macro used since there will be a number of places where we might want to render a post-->
+
 <!-- This macro takes the post as a single argument -->
 <!-- When this is called, we render a narrow metadata column, containing the post date
     And a wider body column, containing the post title and the post content -->
@@ -15,12 +17,22 @@
     </div>
     <div class="col-md-10">
         <h1>
-           <li class="active"><a href="#">{( post.title )}</a></li>
+           <a href="{{url_for('single_post', id=post.id)}}">{( post.title )}</a>
         </h1>
         <!--Safe filter is used on post content,
         allows us to inclue HTML in the post content, 
         without it being automatically escaped--> 
         {( post.content|safe )}
     </div>
+</div>
+{% endmacro %}
+
+
+{% macro render_single_post(post) %}
+<div class="col-md-10">
+    <h1>
+        <a href="{{url_for('single_post', id=post.id)}}">{(post.title)}</a>
+    </h1>
+    {(post.content|safe)}
 </div>
 {% endmacro %}
