--- a/blog/templates/macros.html
+++ b/blog/templates/macros.html
@@ -17,7 +17,7 @@
     </div>
     <div class="col-md-10">
         <h1>
-           <a href="{{url_for('single_post', id=post.id)}}">{( post.title )}</a>
+           <a href="{{url_for('view_post', id=post.id)}}">{( post.title )}</a>
         </h1>
         <!--Safe filter is used on post content,
         allows us to inclue HTML in the post content, 
@@ -31,7 +31,7 @@
 {% macro render_single_post(post) %}
 <div class="col-md-10">
     <h1>
-        <a href="{{url_for('single_post', id=post.id)}}">{(post.title)}</a>
+        <a href="{{url_for('view_post', id=post.id)}}">{( post.title )}</a>
     </h1>
     {(post.content|safe)}
 </div>
