Added edit button to single post view without, position not yet changed

--- a/blog/static/main.css
+++ b/blog/static/main.css
@@ -2,3 +2,13 @@ div.metadata {
 	margin-top: 20px;
 	font-size: 1.5em; 
 }
+
+.post {
+	display: block;
+	clear: both;
+}
+
+.edit {
+	display: block;
+	clear: both;
+}
