--- a/blog/templates/edit_post.html
+++ b/blog/templates/edit_post.html
@@ -8,7 +8,7 @@
 <form role="form" method="POST">
 	<div class="form-group">
 		<label for="title">Title</label>
-		<input type="text" class="form-control" id="title" name="title" placeholder="{{title}}"required>
+		<textarea type="text" class="form-control" id="title" name="title" placeholder="Post Title" rows="1" required>{{title|safe}}</textarea>
 	</div>
 	<div class="form-group">
 		<label for="content">Content</label>
@@ -17,4 +17,9 @@
 	<button type="submit" class="btn btn-default">Submit Changes</button>
 </form>
 
+<div>
+	<h2>
+		<a href="{{url_for('delete_post', post_id=post.id)}}" onclick="return confirm('Are you really deleting this post?')">Delete</a> 
+	</h2>
+</div>
 {% endblock %}
