--- a/blog/templates/single_post.html
+++ b/blog/templates/single_post.html
@@ -5,11 +5,15 @@
 {% block content %}
 <div class="post">
 	{{macros.render_single_post(post)}}
-</div>
-<div class="edit">
-	<p>
+	<h2 class="edit">
 		<a href="{{url_for('edit_post_get', post_id=post.id)}}">Edit Post</a>
-	</p>
+	</h2>
 </div>
-
+<!--
+<div class="edit">
+	<h2>
+		<a href="{{url_for('edit_post_get', post_id=post.id)}}">Edit Post</a>
+	</h2>
+</div>
+-->
 {% endblock %}
