--- a/blog/templates/macros.html
+++ b/blog/templates/macros.html
@@ -16,6 +16,9 @@
         </ul>
     </div>
     <div class="col-md-10">
+        <h3>
+            {{post.author.name|safe}}
+        </h3>
         <h1>
            <a href="{{url_for('view_post', post_id=post.id)}}">{{ post.title }}</a>
         </h1>
