--- a/blog/templates/login.html
+++ b/blog/templates/login.html
@@ -12,4 +12,7 @@
 	</div>
 	<button type="submit" class="btn btn-default">Submit</button>
 </form>
+<h3>
+	<a href="{{url_for('posts')}}">Return to Blog</a>
+</h3>
 {% endblock %}
