--- a/blog/templates/single_post.html
+++ b/blog/templates/single_post.html
@@ -3,17 +3,19 @@
 {% extends "base.html" %}
 
 {% block content %}
+<h3>
+	<a href="{{url_for('login_get')}}">Log In</a>
+</h3>
+
 <div class="post">
 	{{macros.render_single_post(post)}}
 	<h2 class="edit">
 		<a href="{{url_for('edit_post_get', post_id=post.id)}}">Edit Post</a>
 	</h2>
 </div>
-<!--
-<div class="edit">
-	<h2>
-		<a href="{{url_for('edit_post_get', post_id=post.id)}}">Edit Post</a>
-	</h2>
-</div>
--->
+
+<h4>
+	<a href="{{url_for('log_out')}}">Log Out</a>
+</h4>
+
 {% endblock %}
